@@ -1,3 +1,12 @@
+2007-02-15  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* config/m68k-parse.h (m68k_register): Add ROMBAR0, ASID.
+	* config/tc-m68k.c (mcfv4e_ctrl): Add ColdFire specific names.
+	(mcf5475_ctrl, mcf5485_ctrl): New.
+	(m68k_cpus): Use mcf5485_ctrl and mcf5485_ctrl for those families.
+	(m68k_ip): Add ASID, MMUBAR, ROMBAR0 handling.
+	(init_table): Add asid, mmubar, adjust rombar0.
+
 2007-02-14  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/tc-i386.h (Seg2ShortForm, Seg3ShortForm): Delete.
